# rest-man

./: .gitignore  README.md  build-dmg.sh  build-exe.bat  crop_icon.ps1  package.json  run-dev.bat
icons/: generate_sexy_icon.ps1
scripts/: build-mac.sh  build-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
webui/: index.html  package-lock.json  package.json
webui/src/: App.css  App.tsx  index.css  styles.css  types.ts
webui/src/components/: RequestPanel.tsx  ResponsePanel.tsx  Sidebar.tsx  StatusBar.tsx
